# prop-edge

./: .dockerignore  .gitignore  01_data_exploration.ipynb  BOARD_DEPLOY.md  BOT_DEPLOY.md  CHANGELOG.md  Dockerfile  Dockerfile.board  Dockerfile.bot  PROVENANCE.md  Procfile  README.md  ROADMAP.md  pyproject.toml  railway.board.json  railway.json  requirements-bot.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: actions_budget.yml  augsports_reminder.yml  cbb_reminder.yml  ci.yml  daily.yml  db_backup.yml  email_test.yml  nfl_reminder.yml  refresh.yml  weather_backfill.yml  weekly_retrain.yml
docs/: MODEL_VERSIONING.md
models/: earned_runs_allowed_v1.txt  earned_runs_allowed_v1_calibrator.pkl  earned_runs_allowed_v1_meta.json  hits_allowed_v1.txt  hits_allowed_v1_calibrator.pkl  hits_allowed_v1_meta.json  hits_runs_rbis_v1.txt  hits_runs_rbis_v1_meta.json  hits_v1.txt  hits_v1_calibrator.pkl  hits_v1_meta.json  mlb_home_runs_v1.txt  mlb_home_runs_v1_calibrator.pkl  mlb_home_runs_v1_meta.json  mlb_winner_v1_classifier.txt  mlb_winner_v1_meta.json  mlb_winner_v1_regressor.txt  nba_assists_v1.txt  nba_assists_v1_calibrator.pkl  nba_assists_v1_meta.json  nba_points_v1.txt  nba_points_v1_calibrator.pkl  nba_points_v1_meta.json  nba_pts_asts_v1.txt  nba_pts_asts_v1_calibrator.pkl  nba_pts_asts_v1_meta.json  nba_pts_rebs_asts_v1.txt  nba_pts_rebs_asts_v1_calibrator.pkl  nba_pts_rebs_asts_v1_meta.json  nba_pts_rebs_v1.txt  nba_pts_rebs_v1_calibrator.pkl  nba_pts_rebs_v1_meta.json  nba_rebounds_v1.txt  nba_rebounds_v1_calibrator.pkl  nba_rebounds_v1_meta.json  nba_rebs_asts_v1.txt  nba_rebs_asts_v1_calibrator.pkl  nba_rebs_asts_v1_meta.json  nba_threes_made_v1.txt  nba_threes_made_v1_calibrator.pkl  (+64 more)
notebooks/: 01_data_exploration.ipynb
props/api/: __init__.py  formatting.py  repo.py  server.py
props/bot/: discord_interactions.py  register_commands.py  requirements-bot.txt
props/features/: cbb_rolling.py  cfb_rolling.py  derived_writer.py  inference.py  mlb_advanced_stats.py  mlb_batter_sos.py  mlb_batter_vs_pitcher.py  mlb_opposing_lineup.py  mlb_opposing_pitcher.py  mlb_rolling.py  mlb_weather_features.py  nba_back_to_back.py  nba_basketball_iq.py  nba_home_away.py  nba_opposing_team.py  nba_play_types.py  nba_rolling.py  nba_streak.py  sos_eval.py  (+7 more)
scripts/: _prod_run.sh  backfill_mlb.py  backfill_nba.py  clean_roadmap.py  daily.sh  dump_schema.sh  install_cron.sh  install_hooks.sh  install_scrape_cron.sh  merge_nba_placeholders.py  restore_db.sh  rotate_odds_key.sh  scrape_lines.sh  scrape_prizepicks.sh
sql/: schema.sql
tests/: test_core.py  test_honest_oos.py  test_sleeper_arb.py
ui/: dashboard.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+148 files in other folders)
