[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "props"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pybaseball>=2.2",
    "requests>=2.32",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.5",
    "structlog>=24.1",
    "lightgbm>=4.6",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["props*"]
exclude = ["sql*", "notebooks*", "scripts*"]

[tool.mypy]
# A SCOPED, growing type gate — same philosophy as the flake8 F821 NameError gate
# (which a 10-day outage proved is worth having): type-check the core utils + the
# ops modules so new/maintained code stays type-correct, without dumping a wall of
# errors from the legacy untyped tree. Add packages to `files` as they're cleaned.
files = ["props/utils", "props/ops", "props/models/honest_oos.py"]
plugins = ["pydantic.mypy"]
python_version = "3.11"
ignore_missing_imports = true   # third-party libs (lightgbm, sqlalchemy rows…) lack stubs
disable_error_code = ["import-untyped"]   # …same for installed-but-unstubbed libs (requests)
check_untyped_defs = false      # don't force annotations on every legacy def yet
warn_unused_ignores = false
warn_return_any = false

[tool.ruff.lint]
# Pyflakes (F) across the whole tree — unused imports/names, redefinitions, etc.
# (a superset of the flake8 F821/F823/F811 CI gate). calibrate_nba's intentional
# dead pre-allocs are the only F841s left; ignored there until that script is
# cleaned. Broaden the select set as the codebase is tidied.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"props/models/calibrate_nba.py" = ["F841"]
